# Vec

./: CMakeLists.txt  README.md
src/: audio.cpp  bml.h  circle.fs  common.glsl  crossgl.h  fade.fs  game.cpp  gfx.cpp  glow.fs  input.cpp  main.cpp  meter.fs  noop.vs  pulse.fs  pulse.vs  render_gl.cpp  scintillate.fs  stretch.vs  swirl.fs  vec.h  vertex.glsl  wiggle.vs
